add redis cache